<resources>
    <string name="app_name">Magical vibrations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_top">Get PRO!</string>
    <string name="dialog_second">To have free access to "Personal"</string>
    <string name="three">setting. And get rid from all ADS forever!</string>
    <string name="button_dialog_text">Get It!</string>
    <string name="or">or</string>
    <string name="watch">Watch video!</string>
    <string name="And">And get one time free access!</string>
    <string name="Watch">Watch now!</string>
    <string name="sound">Sounds better with headsets =)</string>
    <string name="soundbutton">Got it!</string>
    <string name="default_notification_channel_id" translatable="false">vibes_notify</string>
    <string name="title">Welcome!</string>
    <string name="progress_bar_text">Loading</string>
    <string name="mix_name">My Mix</string>
    <string name="my_mix_text">Create your unical mix!</string>
    <string name="content_audio">Music</string>
    <string name="header_text">make with pexels.com</string>
</resources>
