<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/relative_round"
    tools:context=".dialog_personal">

    <RelativeLayout
        android:id="@+id/relatuve_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/relative_round_fragment">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/close" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/smile_star" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_top"
            android:textColor="@color/color_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_second"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/three"
            android:textColor="@color/color_arc"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_buy"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/relative_round"
            android:text="@string/button_dialog_text"
            android:textAllCaps="false"
            android:textColor="@color/colorMain"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relatyve_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relatuve_top">

        <Button
            android:id="@+id/button_video"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/relative_round_button"
            android:text="@string/Watch"
            android:textAllCaps="false"
            android:textColor="@color/color_arc"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textColor="@color/button"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:text="@string/watch"
            android:textColor="@color/button"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:text="@string/And"
            android:textColor="@color/button"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>